# dlc-web-labeler

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: ConfigUploadModal.jsx  LabelCanvas.jsx  LeftSidebar.jsx  RightSidebar.jsx  SignInModal.jsx  TitleBar.jsx  useImage.js
frontend/src/components/dialogs/: NoFramesDialog.jsx  ServerStoppedDialog.jsx  StaleDialog.jsx
frontend/src/hooks/: useHeartbeat.js  useWebSocket.js
frontend/src/utils/: colors.js
src/dlc_labeler/: cli.py  howto.md
src/dlc_labeler/backend/: api.py  dlc_io.py  frame_manager.py
